# HierarchicalGeodesicModeling

./: CMakeLists.txt  README.md
HGMComputation/: CMakeLists.txt  HGMComputation.py  StatsModel.py  manifolds.py
HGMComputation/HGMComputationLib/: StatsModel.py
HGMComputation/Resources/UI/: HGMComputation.ui
